New : home page button, no error upon arriving upload page, back button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,8 +27,9 @@
                         <input class="file-path validate" type="text">
                     </div>
                 </div>
-
+                <input class="btn" type="button" value="Go back!" onclick="history.back()">
                 <button class="btn" type="submit">Submit</button>
+                <input class="btn" type="button" value="home" onclick="window.location.href='http://localhost:3000'" />
             </form>
             <br>
             
